--- a/R-package/targeted/vignettes/ate.Rmd
+++ b/R-package/targeted/vignettes/ate.Rmd
@@ -23,8 +23,7 @@ knitr::opts_chunk$set(
 library(targeted)
 ```
 
-Introduction
-============
+# Introduction
 
 Let \(Y\) be a *binary response*, \(A\) a *categorical treatment*, and \(W\) a
 *vector of confounders*. Assume that we have observed \(n\) i.i.d. observations
@@ -54,8 +53,7 @@ or
 This suggests estimation via either *outcome regression* (OR, g-computation)
 or *inverse probability weighting* (IPW). These can eventually also be combined to a doubly-robust augmented inverse probability weighted (AIPW) estimator.
 
-Simulation
-==============
+# Simulation
 
 As an illustration we simulate from the following model
 \[Y \sim Bernoulli(\operatorname{expit}\{A+X+Z\})\]
@@ -72,8 +70,7 @@ head(d)
 <!-- plot(m) -->
 <!-- ``` -->
 
-Estimation
-==============
+# Estimation
 
 The target parameter, \(E[Y(a)]\) can be estimated with the `targeted::ate` function:
 ```{r syntax}
@@ -128,15 +125,14 @@ summary(a)
 From the `summary` output we also get the estimates of the Average Treatment Effects expressed as a causal relative risk (RR), causal odds ratio (OR), or causal risk difference (RD) including the confidence limits.
 
 
-From the model object `a` we can extract the estimated coefficients (expected potential outcomes) and corresponding asympotic variance matrix with the `coef` and `vcov` methods. The estimated *influence function* can extracted with the `iid` method:
+From the model object `a` we can extract the estimated coefficients (expected potential outcomes) and corresponding asympotic variance matrix with the `coef` and `vcov` methods. The estimated *influence function* can extracted with the `IC` method:
 ```{r ate_methods}
 coef(a)
 vcov(a)
-head(iid(a))
+head(IC(a))
 ```
 
-Multiple treatments
-===================
+# Multiple treatments
 
 As an example with multiple treatment levels, we simulate from a new model where the outcome is continuous and the treatment follows a proportional odds model
 ```{r sim2}
@@ -161,9 +157,7 @@ estimate(a2, function(x) x[2]-x[4])
 ```
 
 
-SessionInfo
-============
-
+# SessionInfo
 
 ```{r}
 sessionInfo()
